...
	    	android:orientation="vertical"
	    	android:layout_marginTop="1dp"
	    	android:layout_marginLeft="150dp">
        
	    <!-- player1_timeline -->
	    <RelativeLayout 
	        android:id="@+id/player1_timeline_wrap"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:visibility="gone"
	    	android:layout_marginTop="20dp">
	        
...
			    
		    </LinearLayout>
	    </RelativeLayout>

	    <!-- player2_timeline -->
	    <RelativeLayout 
	        android:id="@+id/player2_timeline_wrap"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:visibility="gone"
	    	android:layout_marginTop="20dp">

...
