...
               android:layout_marginTop="60dp"
               android:layout_marginLeft="160dp"
               android:gravity="center"
               android:src="@drawable/h_court"
               />
    <ImageView
               android:id="@+id/image_p1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:layout_alignParentTop="true"
               android:layout_marginTop="60dp"
               android:layout_marginLeft="160dp"
...
